// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin in a stock JBrowse 1`] = `
Object {
  "type": "TwoBitAdapter",
}
`;

exports[`plugin in a stock JBrowse 2`] = `
Object {
  "type": "IndexedFastaAdapter",
}
`;
